--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,10 @@
     "comely-io/http": "1.0.47",
     "web3p/rlp": "^0.3.2",
     "furqansiddiqui/ecdsa-php": "^0.2.0",
-    "deemru/blake2b": "^1.0"
+    "deemru/blake2b": "^1.0",
+    "furqansiddiqui/ecdsa-php": "^0.2.0",
+    "furqansiddiqui/bip39-mnemonic-php": "^0.1.3",
+    "furqansiddiqui/bip32-keypair-php": "dev-master#57ec344"
   },
   "autoload": {
     "psr-4": {
